[project]
name = "garaiste"
version = "0.1.0"
description = "FastAPI Website"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "jinja2>=3.1.6",
    "psycopg[binary]>=3.3.4",
    "python-multipart>=0.0.28",
    "uvicorn>=0.47.0",
]

[tool.ruff]
line-length = 108
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
