[project]
name = "garaiste"
version = "0.1.0"
description = "FastAPI Website"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.1",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[tool.ruff]
line-length = 160
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
